# image_detection_msgs

./: CMakeLists.txt  package.xml
msg/: DetectionBox.msg  DetectionBoxesList.msg  DetectionMetaData.msg  DetectionPoses.msg  SemanticDetectionMat.msg
